           Changes in BB version 2008.x-1

  o changed the title (as appears on CRAN) to be more descriptive.


              BB version 2008.4-1

  o first release